--- a/src/com/javarush/test/level28/lesson15/big01/view/vacancies.html
+++ b/src/com/javarush/test/level28/lesson15/big01/view/vacancies.html
@@ -12,7 +12,127 @@
      <th>City</th> 
      <th>Company Name</th> 
      <th>Salary</th> 
-    </tr>                                                                                                                                                                         
+    </tr>                                                                                                                                                                
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/18750126?query=java%20Barnaul">Разработчик Java</a></td> 
+     <td class="city">Белгород</td> 
+     <td class="companyName">ЛАНИТ</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/14210161?query=java%20Barnaul">Разработчик Java</a></td> 
+     <td class="city">Тамбов</td> 
+     <td class="companyName">ЛАНИТ</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/17102283?query=java%20Barnaul">Младший разработчик Java</a></td> 
+     <td class="city">Тамбов</td> 
+     <td class="companyName">ЛАНИТ</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/18750108?query=java%20Barnaul">Младший разработчик Java</a></td> 
+     <td class="city">Белгород</td> 
+     <td class="companyName">ЛАНИТ</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/17183304?query=java%20Barnaul">Team Lead Java</a></td> 
+     <td class="city">Москва, Авиамоторная и еще 1</td> 
+     <td class="companyName">ЛАНИТ</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/18895189?query=java%20Barnaul">Java-разработчик (Junior, Middle)</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">Ритейл Сервис, Группа компаний</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/18989476?query=java%20Barnaul">Программист Java</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">ООО ЦеТК</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/16041868?query=java%20Barnaul">Software Development Engineer Java</a></td> 
+     <td class="city">Новосибирск</td> 
+     <td class="companyName">Xored</td> 
+     <td class="salary">80&nbsp;000-120&nbsp;000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/17900163?query=java%20Barnaul">Инженер-Программист (Java, С++, С#)</a></td> 
+     <td class="city">Новосибирск</td> 
+     <td class="companyName">Кадровое агентство Алексея Сухорукова</td> 
+     <td class="salary">77&nbsp;000-300&nbsp;000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19301449?query=java%20Barnaul">Java разработчик</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">EPAM Systems, Inc.</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19250063?query=java%20Barnaul">Программист кассового ПО</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">ВЕРНЫЙ, Сеть магазинов</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/18581124?query=java%20Barnaul">Ведущий разработчик/Teamlead Documentum</a></td> 
+     <td class="city">Белгород</td> 
+     <td class="companyName">ЛАНИТ</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://career.ru/vacancy/17812476?query=java%20Barnaul">Junior Developer IOS / Android</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">Appodeal</td> 
+     <td class="salary">от 25&nbsp;000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19482338?query=java%20Barnaul">Senior Android разработчик</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">ООО МФК Займер</td> 
+     <td class="salary">от 70&nbsp;000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19470284?query=java%20Barnaul">Старший инженер</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">Альфа-Банк</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19486482?query=java%20Barnaul">Разработчик БД</a></td> 
+     <td class="city">Москва</td> 
+     <td class="companyName">ЛАНИТ</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19301464?query=java%20Barnaul">Test Automation Engineer</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">EPAM Systems, Inc.</td> 
+     <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19252104?query=java%20Barnaul">Senior Android разработчик</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">ООО МФК Займер</td> 
+     <td class="salary">от 70&nbsp;000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19379774?query=java%20Barnaul">Разработчик Java (Swing, JavaFx)</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">Soft-logic</td> 
+     <td class="salary">45&nbsp;000-70&nbsp;000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://barnaul.hh.ru/vacancy/19450835?query=java%20Barnaul">Программист ADF</a></td> 
+     <td class="city">Барнаул</td> 
+     <td class="companyName">ЗАО Флекс Софтваре Системс</td> 
+     <td class="salary"></td> 
+    </tr>
     <tr class="vacancy"> 
      <td class="title"><a href="https://moikrug.ru/vacancies/1000022128">JAVA- разработчик</a></td> 
      <td class="city">Санкт-Петербург</td> 
@@ -290,12 +410,6 @@
      <td class="salary">От 80 000 до 120 000 руб.</td> 
     </tr>
     <tr class="vacancy"> 
-     <td class="title"><a href="https://moikrug.ru/vacancies/1000031029">Java разработчик в FinTech проект</a></td> 
-     <td class="city">Москва</td> 
-     <td class="companyName">Unity Trading Systems</td> 
-     <td class="salary">От 150 000 до 200 000 руб.</td> 
-    </tr>
-    <tr class="vacancy"> 
      <td class="title"><a href="https://moikrug.ru/vacancies/1000030627">Senior Java Developer (Big Data)</a></td> 
      <td class="city">Москва</td> 
      <td class="companyName">МегаФон</td> 
@@ -306,6 +420,12 @@
      <td class="city"></td> 
      <td class="companyName">Nitka Technologies</td> 
      <td class="salary"></td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://moikrug.ru/vacancies/1000031029">Java разработчик в FinTech проект</a></td> 
+     <td class="city">Москва</td> 
+     <td class="companyName">Unity Trading Systems</td> 
+     <td class="salary">От 150 000 до 200 000 руб.</td> 
     </tr>
     <tr class="vacancy"> 
      <td class="title"><a href="https://moikrug.ru/vacancies/1000028030">Методист/Преподаватель курса "Разработка под Android на языке Java"</a></td> 
@@ -416,16 +536,16 @@
      <td class="salary"></td> 
     </tr>
     <tr class="vacancy"> 
-     <td class="title"><a href="https://moikrug.ru/vacancies/1000030668">QA Engineer (manual/auto)</a></td> 
-     <td class="city">Москва</td> 
-     <td class="companyName">Эвотор</td> 
-     <td class="salary"></td> 
-    </tr>
-    <tr class="vacancy"> 
      <td class="title"><a href="https://moikrug.ru/vacancies/1000011902">Преподаватель курса "Основы Java. Уровень 1-2"</a></td> 
      <td class="city">Санкт-Петербург</td> 
      <td class="companyName">Level UP</td> 
      <td class="salary">От 30 000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
+     <td class="title"><a href="https://moikrug.ru/vacancies/1000030668">QA Engineer (manual/auto)</a></td> 
+     <td class="city">Москва</td> 
+     <td class="companyName">Эвотор</td> 
+     <td class="salary"></td> 
     </tr>
     <tr class="vacancy"> 
      <td class="title"><a href="https://moikrug.ru/vacancies/1000027570">Senior Scala Developer</a></td> 
@@ -476,6 +596,12 @@
      <td class="salary"></td> 
     </tr>
     <tr class="vacancy"> 
+     <td class="title"><a href="https://moikrug.ru/vacancies/1000031118">Ведущий программист-интегратор</a></td> 
+     <td class="city">Москва</td> 
+     <td class="companyName">Инновационный центр банковских технол...</td> 
+     <td class="salary">От 130 000 руб.</td> 
+    </tr>
+    <tr class="vacancy"> 
      <td class="title"><a href="https://moikrug.ru/vacancies/1000030565">Android разработчик</a></td> 
      <td class="city">Москва</td> 
      <td class="companyName">MFMSolutions</td> 
@@ -486,12 +612,6 @@
      <td class="city">Москва</td> 
      <td class="companyName">Netcracker Technology</td> 
      <td class="salary"></td> 
-    </tr>
-    <tr class="vacancy"> 
-     <td class="title"><a href="https://moikrug.ru/vacancies/1000031118">Ведущий программист-интегратор</a></td> 
-     <td class="city">Москва</td> 
-     <td class="companyName">Инновационный центр банковских технол...</td> 
-     <td class="salary">От 130 000 руб.</td> 
     </tr>
     <tr class="vacancy"> 
      <td class="title"><a href="https://moikrug.ru/vacancies/1000028277">Методист/преподаватель вебинаров по Ruby (RoR)</a></td> 
